[tool.poetry]

[project]
name = "robot-code-2026"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
  { name = "Ishaan Sen", email = "ishaan.sen100@gmail.com" },
  { name = "Omkar Subramaniam", email = "omnikar5@gmail.com" },
  { name = "Aneesha Guna", email = "aneesha.guna@gmail.com" },
  { name = "Matthew Carr", email = "matthewjumpingdolphin@gmail.com" },
  { name = "Dillon Gutowski", email = "dillongutowski@gmail.com" },
  { name = "Hudson Jimenez", email = "hudsonjimenez@gmail.com" },
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
robotpy = {extras = ["commands2", "phoenix6", "rev", "navx"], version = "^2026.2.1"}
pycowsay = "^0.0.0.2"
photonlibpy = "^2025.1.1"
astar = "^0.99"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.0"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"