[tool.poetry]

[project]
name = "robot-code-2026"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
  { name = "Ishaan Sen", email = "ishaan.sen100@gmail.com" },
  { name = "Omkar Subramaniam", email = "omnikar5@gmail.com" },
  { name = "Aneesha Guna", email = "aneesha.guna@gmail.com" },
  { name = "Matthew Carr", email = "matthewjumpingdolphin@gmail.com" },
  { name = "Dillon Gutowski", email = "dillongutowski@gmail.com" },
  { name = "Hudson Jimenez", email = "hudsonjimenez@gmail.com" },
]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
robotpy = {extras = ["commands2"], version = "^2026.2.1"}
robotpy-ctre = "^2026.0.0"
robotpy-rev = "^2026.0.0"
robotpy-navx = "^2026.0.0"
pycowsay = "^0.0.0.2"
photonlibpy = "^2026.2.2"
astar = "^0.99"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.0"
python-lsp-server = "^1.12.0"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["phoenix6", "phoenix6.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
