[tool.poetry]
name = "robot-code-2026"
version = "0.0.1"
description = ""
authors = [
  "Ishaan Sen <ishaan.sen100@gmail.com", 
  "Omkar Subramaniam <omnikar5@gmail.com>",
  "Aneesha Guna <aneesha.guna@gmail.com>",
  "Matthew Carr <matthewjumpingdolphin@gmail.com>",
  "Dillon Gutowski <dillongutowski@gmail.com>",
  "Hudson Jimenez <hudsonjimenez@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
robotpy = {extras = ["commands2", "phoenix6", "rev", "navx"], version = "^2026.2.1"}
pycowsay = "^0.0.0.2"
photonlibpy = "^2025.1.1"
astar = "^0.99"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.0"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"