[project]
name = "robot-code-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "rward3595",email = "r.ward3595@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "robotpy (>=2026.2.1,<2027.0.0)"
]

[tool.poetry]
packages = [{include = "robot_code_2026", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
