[project]
name = "robot-code-2026"
version = "0.0.1"
description = ""
authors = [
  {name= "Ishaan Sen",        email= "ishaan.sen100@gmail.com"}, 
  {name= "Omkar Subramaniam", email= "omnikar5@gmail.com"},
  {name= "Aneesha Guna",      email= "aneesha.guna@gmail.com"},
  {name= "Matthew Carr",      email= "matthewjumpingdolphin@gmail.com"},
  {name= "Dillon Gutowski",   email= "dillongutowski@gmail.com"},
  {name= "Hudson Jimenez",    email= "hudsonjimenez@gmail.com"}
]
readme = "README.md"

[project.urls]
HomePage = "https://github.com/Team801Horsepower/robot-code-2026"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
robotpy = {extras = ["commands2", "phoenix6", "rev", "navx"], version = "^2026.2.1"}
pycowsay = "^0.0.0.2"
astar = "^0.99"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.0"
python-lsp-server = "^1.12.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
